fix overflow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,7 @@
   gap: 25px;
   text-align: center;
   font-family: var(--font-comfortaa);
+
   /* background-color: hsl(248, 96%, 67%); */
 }
 
@@ -48,7 +49,7 @@
 
 .drawing {
   position: absolute;
-  bottom: -10px;
+  bottom: 0;
   max-width: 280px;
   height: auto;
 }
